# vox-timeline

./: .gitignore  PLAN_VIDEO_TRANSLATION.md  README.md  app.py  demo_script.json  main.py  pyproject.toml  requirements.txt
src/core/: asr.py  audio.py  translator.py  tts.py
src/pipeline/: dubbing.py  video_translator.py
